force-app/main/default/objects/osf_prominent_product__c/osf_prominent_product__c.object-meta.xml
<CustomObject>
    <description>Prominent Products will have 3 types: &quot;Recommended, Best Sellers and New Products&quot;</description>
    <label>Prominent Product</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Prominent Products Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prominent Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>