force-app/main/default/objects/osf_prominent_product__c/fields/osf_external_id__c.field-meta.xml
<CustomField>
    <fullName>osf_external_id__c</fullName>
    <description>External Id for Prominent Products integration</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id for Prominent Products integration</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>