force-app/main/default/objects/osf_prominent_product__c/fields/osf_product__c.field-meta.xml
<CustomField>
    <fullName>osf_product__c</fullName>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Prominent Products</relationshipLabel>
    <relationshipName>osf_prominent_products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>