force-app/main/default/objects/osf_prominent_product__c/fields/osf_type__c.field-meta.xml
<CustomField>
    <fullName>osf_type__c</fullName>
    <description>The type of prominency of the product.</description>
    <inlineHelpText>The type of prominency of the product.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Best Sellers</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>